--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "devDependencies": {
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.8",
+    "gulp-react": "^0.5.0",
     "gulp-sass": "^0.7.2"
   }
 }
