--- a/package.json
+++ b/package.json
@@ -7,8 +7,11 @@
     "url": "https://github.com/IvanVergiliev/2048-react"
   },
   "devDependencies": {
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
     "gulp": "^3.8.7",
     "gulp-autoprefixer": "0.0.8",
+    "gulp-babel": "^6.1.2",
     "gulp-react": "^0.5.0",
     "gulp-sass": "^0.7.2"
   }
